#NOISSUE Sonar issues fix